add users operations/endpoits
