# src/routers/user.js
@@ -2,7 +2,8 @@ import express from 'express';
 import { ctrlWrapper } from '../utils/ctrlWrapper.js';
 import {
   patchUserController,
-  getUserController,
+	getUserController,
+	patchAvatarController,
   upsertUserController,
 } from '../controllers/user.js';
 import { validateBody } from '../middlewares/validateBody.js';
@@ -10,25 +11,27 @@ import { updateUserSchema } from '../validation/user.js';
 import { isValidId } from '../middlewares/isValidId.js';
 import { authenticate } from '../middlewares/authenticate.js';
 import { upload } from '../middlewares/multer.js';
+import { checkUser } from '../middlewares/checkUser.js';
+
 
 const router = express.Router();
 const jsonParser = express.json();
 router.use(authenticate);
+router.use(checkUser);
 
 router.patch(
-	'/:userId',
-	isValidId,
-  jsonParser,
+  '/avatar',
   upload.single('avatarUrl'),
-  validateBody(updateUserSchema),
-  ctrlWrapper(patchUserController),
+  ctrlWrapper(patchAvatarController),
 );
 
-router.get(
-	'/:userId',
-	isValidId,
+router.get('/', jsonParser, ctrlWrapper(getUserController));
+
+router.patch(
+  '/',
   jsonParser,
-  ctrlWrapper(getUserController),
+  validateBody(updateUserSchema),
+  ctrlWrapper(patchUserController),
 );
 
 router.put(
