# src/validation/auth.js
@@ -3,7 +3,7 @@ import Joi from 'joi';
 export const registerUserSchema = Joi.object({
   name: Joi.string().min(3).max(30).required(),
   email: Joi.string().email().required(),
-  password: Joi.string().required(),
+  password: Joi.string().min(8).max(64).required(),
 });
 
 export const loginUserSchema = Joi.object({
